--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "export NODE_ENV=test && forever start ../backend/index.js && forever start node_modules/@angular/cli/bin/ng serve --port 4401 --configuration=test && testcafe chrome:headless $file && forever stopall",
+    "test": "export NODE_ENV=test && forever start ../backend/index.js && forever start node_modules/@angular/cli/bin/ng serve --port 4401 --configuration=test && sleep 10 && testcafe chrome:headless $file && forever stopall",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
